--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: '13702047936@163.com'
+phone: '137 0204 7936'
 contact_button_link: 'contact'
