--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
-google_analytics_id: ""  
+google_analytics_id: "G-8QZW2YLKD2"  
 meta_twitter_site: "@onemedheart"
 meta_twitter_creator: "@onemedheart"
 copyright_text: 'Powered by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
