--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ logo:
   mobile: "images/logo/logo-mobile.png"
   mobile_height: "29px"
   mobile_width: "133px"
-  desktop: "images/logo/logo.png"
-  desktop_height: "32px"
-  desktop_width: "120px"
+  desktop: "images/logo/logo-mobile.png"
+  desktop_height: "29px"
+  desktop_width: "133px"
 
 home: 
   limit_services: 6
