--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ permalink: pretty
 title: '医心科技'
 
 logo:
-  mobile: "images/logo/logo-mobile.png"
-  mobile_height: "29px"
-  mobile_width: "133px"
-  desktop: "images/logo/logo-mobile.png"
+  mobile: "images/logo/logo.svg"
+  mobile_height: "33px"
+  mobile_width: "33px"
+  desktop: "images/logo/logo.png"
   desktop_height: "29px"
   desktop_width: "133px"
 
